--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import '~bootstrap/scss/reboot';
 @import '~bootstrap/scss/type';
 @import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/tables';
 @import '~bootstrap/scss/forms';
 @import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/buttons';
