--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,10 @@
 @import 'start';
 
 body {
-  background: $gray-100;
-
   @include media-breakpoint-up(md) {
     padding: 8vmin;
   }
+}
+section {
+  padding: $spacer 0;
 }
