--- a/src/components/UserInput/index.scss
+++ b/src/components/UserInput/index.scss
@@ -1,10 +1,18 @@
 @import '../../styles/start';
 
-.Form {
-  background-color: $white;
+.user-input {
   padding: $spacer;
+  background-color: mix($white, $body-bg, 80);
 
-  @include media-breakpoint-up(md) {
-    width: 40%;
+  form {
+    margin-top: $spacer * .75;
+  }
+  label {
+    line-height: 1.3;
+    margin-bottom: $label-margin-bottom * 1.15;
+  }
+
+  @include media-breakpoint-up(sm) {
+    max-width: 24em;
   }
 }
