--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -17,7 +17,7 @@
 //
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin: $headings-margin-bottom 0;
+  margin: $headings-margin-bottom 0 0;
 
   &:first-child {
     margin-top: 0;
