--- a/src/components/UserInput/index.scss
+++ b/src/components/UserInput/index.scss
@@ -11,8 +11,20 @@
     line-height: 1.3;
     margin-bottom: $label-margin-bottom * 1.15;
   }
+  .years-to-retire {
+    text-align: center;
+    padding: $spacer * .5 0;
 
+    small {
+      display: block;
+      font-family: $font-family-serif;
+      font-style: italic;
+      font-size: 1rem;
+    }
+  }
   @include media-breakpoint-up(sm) {
+
     max-width: 24em;
+
   }
 }
