--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -77,6 +77,8 @@ $input-btn-focus-width: .2rem;
 $input-btn-focus-color: rgba($component-active-bg, .1);
 $input-btn-focus-box-shadow:  0 1px .5em $input-btn-focus-width $input-btn-focus-color;
 
+$form-group-margin-bottom: $paragraph-margin-bottom * .75;
+
 // Forms
 //
 $input-padding-x: $input-btn-padding-y * 1.25;
